# UTMC.github.io

./: .gitignore  CLAUDE.md  CNAME  config.toml  history.html  history.md  index.html  index.md  newcomer.html  newcomer.md  slides.html  software.html  software.md
50/: .gitignore  index.html  make-timeline.py  timeline.tsv
_layout/: history.html  layout.html  software.html
data/: software.tsv  timeline.tsv
files/: 50.css  common.css  history.css  software.css  style.css
scripts/: CLAUDE.md  make-favicon.py  make-ogp-image.py  make-software.py  make-timeline.py  pyproject.toml  update.sh
scripts/generator/: __init__.py  builder.py  cli.py  config.py  exec_extension.py  page.py  renderer.py  validators.py
