[project]
name = "utmc-site-generator"
version = "0.1.0"
description = "UTMC website static site generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.9.0",
    "pillow>=12.2.0",
    "markdown>=3.5",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "python-frontmatter>=1.1",
]
